app/blog/manifests/blog-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: shmel-blog-service
  namespace: shmel-blog
spec:
  selector:
    app: shmel-blog
  ports:
    - port: 80
